--- a/WebDesign/Cutelaria-Do-Indiano/cutelaria-indiano.css
+++ b/WebDesign/Cutelaria-Do-Indiano/cutelaria-indiano.css
@@ -1,3 +1,4 @@
+/*making a website for my friend, for now im trying to make a decent navegation before going to the other elements.*/
 .primary-nav{
     display:flex;
     place-content: space-between;
