--- a/WebDesign/Portifolio/about_me.css
+++ b/WebDesign/Portifolio/about_me.css
@@ -10,6 +10,11 @@ li{
 footer{
     text-align: center;
 }
+h2{
+    text-align: center;
+    color:rgba(247, 8, 8, 0.863);
+    background-color: rgb(0, 0, 0);
+}
 .Acessibility{
     font-weight: bold;
     color: #006400;
