--- a/WebDesign/Portifolio/about_me.css
+++ b/WebDesign/Portifolio/about_me.css
@@ -6,8 +6,12 @@ h1{
 
 nav{
     font-family: Arial, Helvetica, sans-serif;
+    color:red;
 }
-
+a{
+    text-decoration: none;
+    color:rgb(14, 13, 13);
+}
 li{
     list-style-type: none;
 }
@@ -43,4 +47,7 @@ video{
     text-align: center;
     font-weight: bold;
     font-size: large;
+}
+.Fragmentos{
+    color:rgb(247, 6, 6);
 }
