--- a/WebDesign/Portifolio/about_me.css
+++ b/WebDesign/Portifolio/about_me.css
@@ -3,18 +3,22 @@ h1{
     color:rgba(247, 8, 8, 0.863);
     background-color: rgb(0, 0, 0);
 }
-
-nav{
-    font-family: Arial, Helvetica, sans-serif;
-    color:red;
-}
-a{
+li {
+    float: left;
+  }
+  
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
-    color:rgb(14, 13, 13);
-}
-li{
-    list-style-type: none;
-}
+  }
+  
+  /* Change the link color to #111 (black) on hover */
+  li a:hover {
+    background-color: #111;
+  }
 h2{
     text-align: center;
     color:rgba(247, 8, 8, 0.863);
@@ -50,4 +54,20 @@ video{
 }
 .Fragmentos{
     color:rgb(247, 6, 6);
+}
+.primary_nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    position: sticky;
+    top:0;
+}
+.primary_nav li a{
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
