--- a/WebDesign/Portifolio/index.css
+++ b/WebDesign/Portifolio/index.css
@@ -1,1 +1,41 @@
-/*just a coment for mow*/
+h1{
+    text-align: center;
+    color:rgba(247, 8, 8, 0.863);
+    background-color: rgb(0, 0, 0);
+  }
+  .primary_nav li{
+    float: left;
+  }
+  
+  /* Change the link color to #111 (black) on hover */
+  li a:hover {
+    background-color: #111;
+  }
+  h2{
+    text-align: center;
+    color:rgba(247, 8, 8, 0.863);
+    background-color: rgb(243, 239, 239);
+  }
+  
+  footer{
+    text-align: center;
+    color:rgba(247, 8, 8, 0.863);
+    background-color: rgb(245, 240, 240);
+    clear:both;
+  }
+  .primary_nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    position: sticky;
+    top:0;
+  }
+  .primary_nav li a{
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
