--- a/WebDesign/Portifolio/index.css
+++ b/WebDesign/Portifolio/index.css
@@ -1,7 +1,9 @@
+body{
+  background-color: #111;
+  color:rgba(255, 252, 252, 0.863);
+}
 h1{
     text-align: center;
-    color:rgba(247, 8, 8, 0.863);
-    background-color: rgb(0, 0, 0);
   }
   .primary_nav li{
     float: left;
@@ -13,14 +15,10 @@ h1{
   }
   h2{
     text-align: center;
-    color:rgba(247, 8, 8, 0.863);
-    background-color: rgb(243, 239, 239);
   }
   
   footer{
     text-align: center;
-    color:rgba(247, 8, 8, 0.863);
-    background-color: rgb(245, 240, 240);
     clear:both;
   }
   .primary_nav ul {
