--- a/WebDesign/Portifolio/about_me.css
+++ b/WebDesign/Portifolio/about_me.css
@@ -26,8 +26,12 @@ h2{
 }
 
 footer{
-    text-align: center;
-    clear:both;
+  text-align: center;
+  clear:both;
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height:2em;   /* Height of the footer */
 }
 video{
     float: left;
