--- a/WebDesign/Portifolio/index.css
+++ b/WebDesign/Portifolio/index.css
@@ -10,18 +10,22 @@ h1{
   }
   
   /* Change the link color to #111 (black) on hover */
-  li a:hover {
+li a:hover {
     background-color: #111;
   }
-  h2{
+h2{
     text-align: center;
   }
   
-  footer{
-    text-align: center;
-    clear:both;
-  }
-  .primary_nav ul {
+footer{
+  text-align: center;
+  clear:both;
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height:2em;   /* Height of the footer */
+}
+.primary_nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -29,11 +33,11 @@ h1{
     background-color: #333;
     position: sticky;
     top:0;
-  }
-  .primary_nav li a{
+}
+.primary_nav li a{
     display: block;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-  }
+}
