--- a/WebDesign/Portifolio/about_me.css
+++ b/WebDesign/Portifolio/about_me.css
@@ -13,7 +13,6 @@ li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
     text-decoration: none;
   }
   
@@ -54,7 +53,7 @@ video{
     font-size: large;
 }
 .Fragmentos{
-    color:rgb(247, 6, 6);
+    color:rgb(247, 47, 47);
 }
 .primary_nav ul {
     list-style-type: none;
@@ -67,8 +66,9 @@ video{
     border:0;
 }
 .primary_nav li a{
-    display: inline-block;
-    color: rgb(255, 251, 251);
-    text-align: center;
-    text-decoration: none;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
