--- a/WebDesign/Portifolio/index.css
+++ b/WebDesign/Portifolio/index.css
@@ -38,6 +38,6 @@ footer{
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 0.85em 1em;
     text-decoration: none;
 }
