--- a/WebDesign/Portifolio/about_me.css
+++ b/WebDesign/Portifolio/about_me.css
@@ -1,6 +1,10 @@
 body{
   background-color: #111;
   color:rgba(255, 252, 252, 0.863);
+  margin: 2%;
+}
+header{
+  padding:2%;
 }
 h1{
     text-align: center;
@@ -27,7 +31,7 @@ h2{
 footer{
   text-align: center;
   clear:both;
-    position:absolute;
+  position:absolute;
     bottom:0;
     width:100%;
     height:2em;   /* Height of the footer */
