--- a/FrontEnd/CSS/myFirstpage.css
+++ b/FrontEnd/CSS/myFirstpage.css
@@ -5,6 +5,8 @@
 
 header{
     padding: 5%;
+    display: flex;
+    justify-content: center;
 }
 .submenu li{
     display: none;
@@ -27,4 +29,11 @@ main{
 }
 footer{
     clear: both;
+}
+
+div{
+    float: left;
+    width: 300px;
+    height: 200px;
+    border: 2px solid;
 }
